# lugdulov

./: .gitignore  .gitmodules  CMakeLists.txt  Lugdulov.pro  README  README.md  config.h.cmake  lugdulov.pri  lugdulov.pro
common/: CMakeLists.txt  common.pro  mobility.h  onlinestatemanager.h  settings.cpp  settings.h  station.h  stationsmodel.cpp  stationsmodel.h  stationsplugin.cpp  stationsplugin.h  stationspluginbcycle.cpp  stationspluginbcycle.h  stationspluginbixi.cpp  stationsplugincallabike.cpp  stationsplugincallabike.h  stationsplugincitybike.cpp  stationsplugincyclocity.cpp  stationsplugincyclocity.h  stationsplugindupral.h  stationspluginfactory.h  stationspluginfactorysimple.cpp  stationspluginfactorysimple.h  stationspluginmanager.cpp  stationspluginmanager.h  stationspluginnextbike.h  stationspluginsimple.cpp  stationspluginsimple.h  stationspluginsimple_p.h  stationspluginsingle.cpp  stationspluginsingle.h  stationsplugintransdev.h  stationspluginvelin.cpp  stationspluginvelin.h  stationssortfilterproxymodel.cpp  stationssortfilterproxymodel.h  tools.cpp  tools.h
data/: CMakeLists.txt  data.pro
data/i18n/: CMakeLists.txt  i18n.qrc  lugdulov_cs.ts  lugdulov_fr.ts  update.sh
data/icons/: lugdulov.icns  lugdulov.rc
kineticscroller/src/: CMakeLists.txt  src.pro
lugdulov/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  fullwindow.ui  lugdulov.h  lugdulov.pro  lugdulov.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdialog.cpp  mapdialog.h  mapgraphicswidget_qtm.cpp  mapgraphicswidget_qtm.h  mapwidget.cpp  mapwidget.h  mapwidget_lite.cpp  mapwidget_lite.h  mapwidget_qmapcontrol.cpp  mapwidget_qmapcontrol.h  mapwidget_qtm.cpp  mapwidget_qtm.h  pluginsdialog.cpp  pluginsdialog.h  pluginsdialog.ui  pluginsmodel.cpp  settings.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  src.pro  stationdelegate.cpp  stationdelegate.h  stationdialog.cpp  stationdialog.h  stationdialog.ui  stationslistdialog.cpp  stationslistdialog.h  (+11 more)
lugdulov-qml/: CMakeLists.txt  main.cpp
lugdulov/i18n/: lugdulov_cs.ts  lugdulov_fr.ts
lugdulov/res/: lugdulov.qrc  stations.json
pkg/: CMakeLists.txt
pkg/linux/: CMakeLists.txt  lugdulov.desktop  net.iksaif.lugdulov.desktop
pkg/maemo5/: CMakeLists.txt  libQtLocation.so.1.0  libQtLocation.so.1.0.2  lugdulov-wrapper  lugdulov.desktop
pkg/meego/: lugdulov.spec  lugdulov.yaml  net.iksaif.lugdulov.spec  net.iksaif.lugdulov.yaml
pkg/osx/: CMakeLists.txt  Info.plist.in  lugdulov-startup
plugins/: CMakeLists.txt  plugin.pro  pluginbase.pri  plugins.pro
plugins/australia/: CMakeLists.txt  australia.pro  australia.qrc  australia.xml  cities.xml  factory.cpp  factory.h  melbourne.cpp  melbourne.h
plugins/austria/: CMakeLists.txt  austria.pro  austria.qrc  austria.xml  bregenzerwald.cpp  bregenzerwald.h  bregenzerwald_p.h  cities.xml  factory.cpp  factory.h  neusiedler-see_p.h  neusiedler_see.cpp  neusiedler_see.h  neusiedler_see_p.h  wien.cpp  wien.h  wien_p.h
plugins/azerbaijan/: cities.xml
plugins/belgium/: CMakeLists.txt  belgium.pro  belgium.qrc  belgium.xml  bruxelles.cpp  bruxelles.h  bruxelles_p.h  cities.xml  factory.cpp  factory.h
plugins/canada/: CMakeLists.txt  canada.pro  canada.qrc  canada.xml  cities.xml  factory.cpp  factory.h  montreal.cpp  montreal.h  montreal_p.h
plugins/common/: CMakeLists.txt  common.pro  mobility.h  onlinestatemanager.cpp  onlinestatemanager.h  settings.h  station.cpp  station.h  stationsmodel.cpp  stationsmodel.h  stationsplugin.cpp  stationsplugin.h  stationspluginbcycle.cpp  stationspluginbcycle.h  stationspluginbixi.cpp  stationspluginbixi.h  stationspluginbixi2.cpp  stationspluginbixi2.h  stationsplugincarto.cpp  stationsplugincarto.h  stationsplugincarto_p.h  stationsplugincitybike.cpp  stationsplugincitybike.h  stationsplugincyclocity.cpp  stationsplugincyclocity.h  stationsplugindupral.cpp  stationsplugindupral.h  stationspluginfactory.h  stationspluginfactorysimple.cpp  stationspluginfactorysimple.h  stationspluginmanager.cpp  stationspluginmanager.h  stationspluginnextbike.cpp  stationspluginnextbike.h  stationspluginsimple.cpp  stationspluginsimple.h  stationspluginsimple_p.h  stationspluginsingle.cpp  stationspluginsingle.h  stationsplugintransdev.cpp  (+7 more)
plugins/cyprus/: cities.xml
plugins/france/: CMakeLists.txt  aixenprovence.cpp  aixenprovence.h  aixenprovence_p.h  amiens.cpp  amiens.h  amiens_p.h  avignon.cpp  avignon.h  avignon_p.h  besancon.cpp  besancon.h  besancon_p.h  bordeaux.cpp  bordeaux.h  bordeaux_p.h  caen.cpp  caen.h  caen_p.h  calais.cpp  calais.h  calais_p.h  cergypontoise.cpp  cergypontoise.h  cergypontoise_p.h  cities.xml  creteil.cpp  creteil.h  creteil_p.h  dijon.cpp  dijon.h  dijon_p.h  factory.cpp  factory.h  france.pro  france.qrc  france.xml  larochelle.cpp  larochelle.h  larochelle_p.h  (+47 more)
plugins/germany/: CMakeLists.txt  aschaffenburg.cpp  aschaffenburg.h  aschaffenburg_p.h  berlin.cpp  berlin.h  berlin_p.h  bielefeld.cpp  bielefeld.h  bochum.cpp  (+107 more)
qmapcontrol/: CMakeLists.txt  emptymapadapter.cpp  googlemapadapter.cpp  googlesatmapadapter.cpp  googlesatmapadapter.h  imagemanager.cpp  imagemanager.h  layer.cpp  layermanager.cpp  mapadapter.cpp  mapcontrol.cpp  mapcontrol.h  mapnetwork.cpp  mapnetwork.h  ocmmapadapter.cpp  ocmmapadapter.h  point.cpp  qmapcontrol.h  qmapcontrol.pro  tilemapadapter.cpp  wmsmapadapter.cpp  yahoomapadapter.cpp
src/: CMakeLists.txt  bookmarklistdialog.cpp  bookmarklistdialog.h  lugdulov.h  lugdulov_fr.ts  main.cpp  mainlistwidget.cpp  mainlistwidget.h  maintreewidget.cpp  maintreewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdialog.cpp  mapdialog.h  mapdialog.ui  mapwidget.cpp  mapwidget.h  mobility.h  settings.cpp  settings.h  src.pro  station.cpp  station.h  stationdelegate.cpp  stationdialog.cpp  stationdialog.h  stationdialog.ui  stations.cpp  stations.h  stationsbuiltin.cpp  stationsbuiltin.h  stationslistdialog.cpp  stationslistdialog.h  stationslistdialog.ui  stationslistview.cpp  stationslistview.h  stationslistwidget.cpp  stationslistwidget.h  stationsmanager.cpp  (+12 more)
(+352 files in other folders)
