project(plugins)

add_subdirectory(france)
add_subdirectory(belgium)
add_subdirectory(ireland)
add_subdirectory(luxembourg)
add_subdirectory(spain)
add_subdirectory(japan)
add_subdirectory(austria)
add_subdirectory(germany)
add_subdirectory(latvia)
add_subdirectory(lower-austria)
add_subdirectory(new-zealand)
add_subdirectory(switzerland)
add_subdirectory(united-kingdom)
add_subdirectory(canada)
add_subdirectory(usa)
add_subdirectory(australia)
add_subdirectory(poland)
add_subdirectory(turkey)
add_subdirectory(slovenia)
add_subdirectory(taiwan)



